--- a/src/pages/Home/Navbar/Navbar.css
+++ b/src/pages/Home/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 #logo {
     position: relative;
     font-size: 25px;
-    color: white;
+    color: cyan;
     text-decoration: none;
     font-weight: 600;
     cursor: default;
